Add simple tempalte to display a list of Data objects

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -35,8 +35,7 @@
     </div>
 </footer>
 
-
-<script src="/static/js/htmx.min.js?v=1.5.0"></script>
+<script src="https://unpkg.com/htmx.org@1.9.8" integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr" crossorigin="anonymous"></script>
 
 {% block additional_js %}{% endblock %}
 
