Add update_content method for Data repository

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 
 <nav>
-    <a class="navbar-brand" href="/">Science <i class="fas fa-book"></i></a>
+<!--    <a class="navbar-brand" href="/">Science <i class="fas fa-book"></i></a>-->
 <!--    <span>-->
 <!--        <a class="nav-item" href="/authors">Authors <i class="fas fa-users"></i></a>-->
 <!--        <a class="nav-item" href="/books">Books <i class="fas fa-book-reader"></i></a>-->
@@ -29,11 +29,11 @@
     {% block main_content %}{% endblock %}
 </div>
 
-<footer>
-    <div class="copyright">
-        Made by <a href="https://github.com/DEENUU1/" target="_blank">Kacper Włodarczyk</a>
-    </div>
-</footer>
+<!--<footer>-->
+<!--    <div class="copyright">-->
+<!--        Made by <a href="https://github.com/DEENUU1/" target="_blank">Kacper Włodarczyk</a>-->
+<!--    </div>-->
+<!--</footer>-->
 
 <script src="https://unpkg.com/htmx.org@1.9.8" integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr" crossorigin="anonymous"></script>
 
