--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,7 +6,8 @@
 
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,700italic|Source+Code+Pro:500">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--    <link rel="stylesheet" href="/static/fontawesome-free/css/all.min.css"/>-->
 
 <!--    <link rel="stylesheet" href="/static/css/site.css"/>-->
@@ -15,28 +16,18 @@
 </head>
 <body>
 
-{#<nav>#}
-{#<!--    <a class="navbar-brand" href="/">Science <i class="fas fa-book"></i></a>-->#}
-{#<!--    <span>-->#}
-{#<!--        <a class="nav-item" href="/authors">Authors <i class="fas fa-users"></i></a>-->#}
-{#<!--        <a class="nav-item" href="/books">Books <i class="fas fa-book-reader"></i></a>-->#}
-{#<!--    </span>-->#}
-{##}
-{##}
-{#</nav>#}
+{# Add navigation bar here #}
 
 <div class="main_content">
     {% block main_content %}{% endblock %}
 </div>
 
-<!--<footer>-->
-<!--    <div class="copyright">-->
-<!--        Made by <a href="https://github.com/DEENUU1/" target="_blank">Kacper Włodarczyk</a>-->
-<!--    </div>-->
-<!--</footer>-->
+{# Add footer here #}
 
 <script src="https://unpkg.com/htmx.org@1.9.8" integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
 {% block additional_js %}{% endblock %}
 
