Add User model (#5)

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,13 +19,10 @@
 {# Add navigation bar here #}
 <nav>
   <a href="/auth/login" class="google-btn">
-    <div class="google-icon"></div>
-    <span class="btn-text">Signin with Gmail</span>
+    Login
   </a>
-  <a href="/auth/logout" class="google-btn">
-    <div class="google-icon"></div>
-    <span class="btn-text">Logout</span>
-  </a>
+  <button hx-get="/auth/logout" >Logout</button>
+
 </nav>
 
 
