Save logged user to database and add endpoint to get current user (#5)

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,8 +21,7 @@
   <a href="/auth/login" class="google-btn">
     Login
   </a>
-  <button hx-get="/auth/logout" >Logout</button>
-
+  <a href="/auth/logout">Logout</a>
 </nav>
 
 
